# robotcontrol

./: .NOTICE_vim  .gitignore  NOTICE  README.md  perGiuseppe.txt
ros/: CMakeLists.txt  package.xml
ros/arduino_hand_driver/: CMakeLists.txt  package.xml
ros/arduino_hand_driver/scripts/: calibration.py  hand_driver.py
ros/hand/: CMakeLists.txt  package.xml
ros/hand/script/: demo_node.py  hand_ctr.py  hand_test.py
ros/hand_app/: CMakeLists.txt  package.xml
ros/hand_app/script/: hand_test.py
ros/hand_driver/: CMakeLists.txt  package.xml  setup.py
ros/hand_driver/launch/: demo_out.launch
ros/hand_driver/scripts/: calibration.py  sign2command.py
ros/hand_drivers/: CMakeLists.txt  package.xml
ros/hand_drivers/script/: demo_node.py  hand_ctr.py
ros/hand_msgs/: CMakeLists.txt  package.xml
ros/hand_msgs/msg/: .hand_skeleton.msg.swp  hand_skeleton.msg  parloma.msg
ros/parloma_app/: CMakeLists.txt  package.xml
ros/parloma_app/launch/: bag.launch  demo.launch  demo_with_keyboard.launch
ros/parloma_app/raspberry_launch/: raspberry_bag.launch
ros/parloma_driver/: CMakeLists.txt  package.xml
ros/parloma_driver.back/launch/: demo_hand.launch
ros/parloma_driver.back/scripts/: calibration.py  hand_widget.py
ros/parloma_driver.back/xml/: signs2pose.xml
ros/parloma_driver/launch/: calibration.launch  demo_hand.launch  demo_out.launch
ros/parloma_driver/scripts/: index_control.py  sign2command.py  sign2command.py.BACKUP.8789.py  sign2command.py.BASE.8789.py  sign2command.py.LOCAL.8789.py  (+2 more)
ros/parloma_hand/: package.xml
ros/parloma_interaction/: CMakeLists.txt  package.xml
ros/parloma_visualization/: CMakeLists.txt  package.xml
ros/serial_bridge/: CMakeLists.txt  package.xml
ros/sign_parser/: CMakeLists.txt  package.xml  setup.py
ros/sign_recognizer/: CMakeLists.txt  package.xml
(+390 files in other folders)
