<package>
  <name>parloma_hand</name>
  <version>0.6.0</version>
  <description>
    This metapackage provide some useful tools to controlling the Parloma robot hand in ROS.

  </description>

  
  <maintainer email="ivana@willowgarage.com">Ivana Bildbotz</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
      <metapackage />
  </export>

</package>
