<package>
  <name>parloma_hand</name>
  <version>0.6.0</version>
  <description>
    This metapackage provide some useful tools to controlling the Parloma robot hand in ROS.

  </description>

  
  <maintainer email="ivana@willowgarage.com">Ivana Bildbotz</maintainer>
  <license>GPLv2</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>parloma_msgs</run_depend>
  <run_depend>parloma_driver</run_depend>
  <run_depend>parloma_visualization</run_depend>
  <run_depend>parloma_interaction</run_depend>

  <export>
      <metapackage />
  </export>

</package>
